# photoranker

./: .gitignore  .mcp.json  CLAUDE.md  README.md
.github/workflows/: release.yml
core-cli/: Cargo.toml
core-cli/src/: config.rs  error.rs  exif.rs  lock.rs  main.rs  phash.rs  thumbnail.rs  xmp.rs
core-cli/src/commands/: burst_detect.rs  burst_tournament.rs  cluster.rs  duplicates.rs  export_xmp.rs  init.rs  mod.rs  prune.rs  rehash.rs  resync_global.rs  thumbnails.rs  tournament.rs  variable.rs  variable_tag.rs
core-cli/src/db/: mod.rs
core-cli/src/quality/: mod.rs
core-cli/tests/: burst_exclude_undo.rs  cluster_and_variable_gui_commands.rs  duplicates.rs  exclude_dirs_scan.rs  fase1_integration.rs  fase2_integration.rs  fase4_integration.rs  fase5_gui_commands.rs  raw_jpeg_pairing.rs  rehash.rs  tournament_reset_undo.rs  tournament_scope.rs
docs/: architecture.md  cli-reference.md  config.md  conventions.md  database.md  fase0-scaffolding.md  fase1-ingesta.md  fase2-clustering.md  fase3-torneo.md  fase4-exportacion.md  fase5-gui.md  fase6-fuera-de-alcance.md  fase7-mejoras-post-mvp.md  fase8-mejoras-avanzadas.md
gui/: README.md  THEME.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
gui/src/: App.tsx  index.css  main.ts  main.tsx  router.ts  state.ts  toast.ts
gui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs
gui/src/api/: asyncCli.ts  cli.ts  index.ts  thumbnailCache.ts  types.ts
gui/src/components/: AppMenu.tsx  ConfirmDialog.ts  ConfirmDialog.tsx  Html.tsx  Lightbox.ts  Lightbox.tsx  LoadingOverlay.ts  LoadingOverlay.tsx  PhotoDetailsDrawer.tsx  QualityPanel.ts  QualityPanel.tsx  RankingBoard.ts  RankingBoard.tsx  ScreePlot.ts  ScreePlot.tsx  TitleBar.tsx  VariableBuilder.tsx  confirmDialog.css  focusTrap.ts  icons.ts  lightbox.css  loadingOverlay.css  rankingBoard.css
gui/src/components/ui/: sonner.tsx
gui/src/i18n/: en.ts  es.ts  index.ts
gui/src/theme/: base.css  dark.css  index.ts  light.css
gui/src/utils/: dom.ts
gui/src/views/: Bursts.ts  Bursts.tsx  Cluster.ts  Cluster.tsx  Export.ts  Export.tsx  Home.ts  Home.tsx  Settings.ts  Settings.tsx  Tournament.ts  Tournament.tsx  Variables.ts  Variables.tsx
migrations/: 001_init.sql  002_quality_metrics.sql  003_bursts.sql  004_variables.sql  005_clustering.sql  006_tournament.sql  007_tournament_sync.sql  008_tournament_undo.sql  009_raw_jpeg_pairing.sql  010_cluster_cache.sql  011_burst_exclusion.sql
r/: run_clustmd.R
