[package]
name = "photoranker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
image = "0.25.10"
imageproc = "0.27.0"
img_hash = "3.2.0"
kamadak-exif = "0.6.1"
quick-xml = "0.41.0"
ratatui = "0.30.2"
ratatui-image = { version = "11.0.6", default-features = false, features = ["crossterm", "image-defaults"] }
rawloader = "0.37.1"
rayon = "1.12.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rusqlite_migration = "2.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
skillratings = "0.29.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
walkdir = "2.5.0"
