[package]
name = "gui"
version = "0.1.0"
description = "GUI de escritorio de PhotoRanker (Tauri) — envoltura visual del CLI, sin lógica propia"
authors = ["Felrac <ofjorque@gmail.com>"]
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/ofjorque/photoranker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6.0.0"
toml = "0.8"

